new changes to index

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <p>
-        Hola gente este es mi sitio web
-        soy Gnossienne
+       Hola amigos este es mi sitio web
+       soy GnossienneMC
     </p>
 </body>
 </html>
